--- a/source/index.html
+++ b/source/index.html
@@ -181,6 +181,7 @@
         </div>
         <div class="slider__pagination swiper-pagination"></div>
       </div>
+      <div class="screen-fill-effect"></div>
     </section>
 
     <section class="screen screen--hidden screen--prizes" id="prizes">
