added animation for images

--- a/source/index.html
+++ b/source/index.html
@@ -398,10 +398,11 @@
       <div class="screen__wrapper">
         <div class="result result--prize">
           <div class="result__image">
-            <picture>
-              <source srcset="img/result2-mob.png 1x, img/result2-mob@2x.png 2x" media="(max-width: 768px) and (orientation: portrait)">
-              <img src="img/result2.png" srcset="img/result2@2x.png 2x" alt="">
-            </picture>
+            <img src="img/module-2/win-suitcase/suitcase.png" alt="" class="result__image-item result__image-item--suitcase">
+            <img src="img/module-2/win-suitcase/flamingo.png" alt="" class="result__image-item result__image-item--flamingo">
+            <img src="img/module-2/win-suitcase/leaf-green.png" alt="" class="result__image-item result__image-item--leaf-green">
+            <img src="img/module-2/win-suitcase/leaf-blue-2.png" alt="" class="result__image-item result__image-item-leaves--left">
+            <img src="img/module-2/win-suitcase/leaf-blue-1.png" alt="" class="result__image-item result__image-leaves result__image-item-leaves--right">
           </div>
           <h2 class="result__title">
             <span class="visually-hidden">ПОбеда!</span>
